# gispulse

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE-COMMERCIAL.md  MIGRATION-2.0.md  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  changelog.html  community.html  contributing.html  docker-compose.local.yml  docker-compose.yml  faq.html  gispulse.spec  gispulse.toml.example  hashmap.json  index.html  pnpm-lock.yaml  pnpm-workspace.yaml  pricing.html  project.gpkg  pyproject.toml  templates.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.serena/: project.yml
api/: rest.html  sdk.html
assets/: api_rest.md.CxTcc7fg.js  api_rest.md.CxTcc7fg.lean.js  api_rest.md.DS4sLGTZ.js  api_rest.md.DS4sLGTZ.lean.js  api_sdk.md.DkCtoDoU.js  api_sdk.md.DkCtoDoU.lean.js  app.BJzKmuCw.js  app.DUvLjuSF.js  app.DfDwXyOt.js  app.Dfifga2W.js  app.hbHoK_C7.js  app.ilQqay8g.js  blog_automate-spatial-workflows.md.Bezlz3MC.js  blog_automate-spatial-workflows.md.Bezlz3MC.lean.js  blog_business-plan-gis-engine-on-demand.md.C7YJE3od.js  blog_business-plan-gis-engine-on-demand.md.C7YJE3od.lean.js  blog_gispulse-synthese-globale.md.lH79uNPv.js  blog_gispulse-synthese-globale.md.lH79uNPv.lean.js  blog_gispulse-vs-fme.md.CDGsp4rv.js  blog_gispulse-vs-fme.md.CDGsp4rv.lean.js  blog_gispulse-vs-qgis-processing.md.DF2svxxz.js  blog_gispulse-vs-qgis-processing.md.DF2svxxz.lean.js  blog_predicats-agregations-triggers.md.CnutC3hM.js  blog_predicats-agregations-triggers.md.CnutC3hM.lean.js  changelog.md.DTVRgV2Q.js  changelog.md.DTVRgV2Q.lean.js  community.md.Co_CG5dj.js  community.md.Co_CG5dj.lean.js  contributing.md.-dyKqR2O.js  contributing.md.-dyKqR2O.lean.js  en_api_rest.md.Db_kbNlE.js  en_api_rest.md.Db_kbNlE.lean.js  en_api_sdk.md.BMvFfyo0.js  en_api_sdk.md.BMvFfyo0.lean.js  en_blog_automate-spatial-workflows.md.CS0qzkUv.js  en_blog_automate-spatial-workflows.md.CS0qzkUv.lean.js  en_blog_gispulse-vs-fme.md.BHwmfxl2.js  en_blog_gispulse-vs-fme.md.BHwmfxl2.lean.js  en_blog_gispulse-vs-qgis-processing.md.Cri3qP0u.js  en_blog_gispulse-vs-qgis-processing.md.Cri3qP0u.lean.js  (+113 more)
blog/: automate-spatial-workflows.html  business-plan-gis-engine-on-demand.html  gispulse-synthese-globale.html  gispulse-vs-fme.html  gispulse-vs-qgis-processing.html  predicats-agregations-triggers.html
branding/: brand-board.html
capabilities/: __init__.py  base.py  classification.py  clustering.py  density.py  network.py  network_topology.py  overlay.py  pointcloud.py  polygon_topology.py  postgis_sql.py  raster.py  registry.py  relation_detector.py  schema.py  selection.py  spatial_stats.py  strategy.py  temporal.py  transforms.py  validation.py
catalog/: __init__.py  models.py  registry.py  source_bridge.py
core/: __init__.py  cache.py  capability_params.py  conditions.py  config.py  enums.py  graph.py  logging.py  models.py  observability.py  pipeline.py  pipeline_schema.py  plugin_contracts.py  plugin_hub.py  pricing_catalog.yml  registry.py  relations.py  session.py  slug.py  sources.py  sql_safety.py  ssrf.py
deploy/: .env.example
design-system/: tokens.css
docker/: garage.toml  init.sql
docs/: CLI_PORTAL_PARITY_AUDIT.md  INTEGRATION_MATRIX.md  (+8 more)
docs-site/: changelog.md  community.md  contributing.md  faq.md  index.md  migration-2.0.md  package-lock.json  package.json  pricing.md  templates.md
examples/plugin-template/: README.md  pyproject.toml
examples/plugin-template/gispulse_cap_example/: __init__.py  capabilities.py  routers.py
packaging/gispulse-pro/: README.md  pyproject.toml
plugins/gispulse-cap-filtermate/: pyproject.toml
plugins/gispulse-cap-filtermate/gispulse_cap_filtermate/: __init__.py  capabilities.py
plugins/gispulse-cap-ftth/: pyproject.toml
plugins/gispulse-cap-ftth/gispulse_cap_ftth/: __init__.py  capabilities.py
plugins/gispulse-cap-h3/: pyproject.toml
plugins/gispulse-cap-h3/gispulse_cap_h3/: __init__.py  capabilities.py
plugins/gispulse-cap-osm-import/: pyproject.toml
plugins/gispulse-cap-osm-import/gispulse_cap_osm_import/: __init__.py  capabilities.py
plugins/gispulse-cap-report/: pyproject.toml
plugins/gispulse-cap-report/gispulse_cap_report/: __init__.py  capabilities.py
plugins/gispulse-cap-stac/: pyproject.toml
plugins/gispulse-cap-stac/gispulse_cap_stac/: __init__.py  capabilities.py
plugins/gispulse-src-bodacc/: pyproject.toml
plugins/gispulse-src-bodacc/gispulse_src_bodacc/: __init__.py  source.py
plugins/gispulse-src-cadastre/: README.md  pyproject.toml
plugins/gispulse-src-cadastre/gispulse_src_cadastre/: __init__.py  source.py
plugins/gispulse-src-dpe/: pyproject.toml
plugins/gispulse-src-dpe/gispulse_src_dpe/: __init__.py  source.py
plugins/gispulse-src-georisques/: pyproject.toml
plugins/gispulse-src-georisques/gispulse_src_georisques/: __init__.py  source.py
plugins/gispulse-src-gpu/: README.md  pyproject.toml
plugins/gispulse-src-gpu/gispulse_src_gpu/: __init__.py  source.py
plugins/gispulse-src-ign/: README.md  pyproject.toml
plugins/gispulse-src-ign/gispulse_src_ign/: __init__.py  source.py
plugins/gispulse-src-insee/: README.md  pyproject.toml
plugins/gispulse-src-insee/gispulse_src_insee/: __init__.py  source.py
plugins/gispulse-src-loyers/: pyproject.toml
plugins/gispulse-src-loyers/gispulse_src_loyers/: __init__.py  source.py
plugins/gispulse-src-rnb/: pyproject.toml
plugins/gispulse-src-rnb/gispulse_src_rnb/: __init__.py  source.py
plugins/gispulse-src-sup/: README.md  pyproject.toml
plugins/gispulse-src-sup/gispulse_src_sup/: __init__.py  source.py
sdk/: pyproject.toml
sdk/gispulse_sdk/: __init__.py  _async_endpoints.py  async_client.py  auth.py  client.py  exceptions.py  models.py  streaming.py
sdk/gispulse_sdk/endpoints/: capabilities.py  catalog.py  datasets.py  jobs.py  ogc.py  projects.py  rules.py  scenarios.py  sessions.py  triggers.py
sdk/tests/: conftest.py  test_async_client.py  test_client.py  test_datasets.py  test_jobs.py  test_rules.py
(+1215 files in other folders)
