[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse"
version = "1.3.1"
description = "Modular geospatial engine with business rules, triggers, and dual operating modes (DuckDB/PostGIS)"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "ImagoData", email = "contact@imagodata.com"},
]
keywords = ["gis", "geospatial", "postgis", "duckdb", "spatial", "rules-engine", "qgis", "ogc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.14,<2.0",
    "shapely>=2.0,<3.0",
    "duckdb>=1.0,<2.0",
    "pyogrio>=0.7,<1.0",
    "pyproj>=3.6,<4.0",
    "typer>=0.9,<1.0",
    "structlog>=24.0,<26.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "httpx>=0.24,<1.0",
]

[project.scripts]
gispulse = "gispulse.cli:main"

[project.optional-dependencies]
postgis = ["sqlalchemy>=2.0,<3.0", "geoalchemy2>=0.14,<1.0", "psycopg2-binary>=2.9,<3.0", "asyncpg>=0.29,<1.0"]
api = ["fastapi>=0.100,<1.0", "uvicorn[standard]>=0.23,<1.0", "watchfiles>=0.21,<2.0", "python-multipart>=0.0.6,<1.0", "requests>=2.28,<3.0", "slowapi>=0.1.9,<1.0", "httpx>=0.24,<1.0"]
mcp = ["fastmcp>=2.14.2,<4.0", "fiona>=1.9,<2.0"]
raster = ["rasterio>=1.3,<2.0", "rasterstats>=0.19,<1.0"]
network = ["networkx>=3.0,<4.0"]
classification = ["mapclassify>=2.5,<3.0"]
pointcloud = ["laspy>=2.5,<3.0"]
redis = ["redis>=5.0,<6.0"]
s3 = ["boto3>=1.28,<2.0"]
scheduling = ["croniter>=1.3,<3.0"]
sso = ["PyJWT[crypto]>=2.8,<3.0", "httpx>=0.24,<1.0"]
billing = ["stripe>=7.0,<16.0"]
parquet = ["pyarrow>=14,<22"]
dev = ["pytest>=9.0.3,<10.0", "pytest-cov>=4.0,<6.0", "pytest-asyncio>=1.0,<2.0", "ruff>=0.1,<1.0", "httpx>=0.24,<1.0", "pip-audit>=2.7,<3.0"]
all = ["gispulse[postgis,api,mcp,raster,network,classification,pointcloud,redis,s3,scheduling,sso,billing,parquet,dev]"]

[project.urls]
Homepage = "https://gispulse.dev"
Documentation = "https://docs.gispulse.dev"
Repository = "https://github.com/imagodata/gispulse"
Changelog = "https://github.com/imagodata/gispulse/blob/main/CHANGELOG.md"
Issues = "https://github.com/imagodata/gispulse/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gispulse*", "core*", "capabilities*", "rules*", "orchestration*", "persistence*", "catalog*", "viewer*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
viewer = ["dist/**/*", "dist/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use pytest.importorskip() before imports, retain unused
# locals for assertion side-effects, and tolerate ambiguous loop indices.
"tests/**/*.py" = ["E402", "E741", "F841", "E731"]
# Lazy / try-import probing modules: imports must come after a runtime
# capability check, and `from x import y` inside try/except is a feature
# detector, not dead code.
"capabilities/postgis_sql.py" = ["E402", "F401"]
"capabilities/registry.py" = ["E402"]
"rules/predicates.py" = ["E402", "F401"]
"plugins/**/*.py" = ["F401"]
# Optional-feature workers / routers register handlers after a runtime
# import check; module-level imports below the guard are intentional.
"gispulse/adapters/esb/workers/base_worker.py" = ["E402"]
"gispulse/adapters/http/routers/jobs_router.py" = ["E402", "F841"]
"gispulse/adapters/http/routers/triggers_router.py" = ["E402"]
"gispulse/adapters/http/routers/portal_datasets_router.py" = ["E701"]
"gispulse/adapters/http/routers/portal_upload_router.py" = ["F841"]
"gispulse/adapters/http/routers/scenarios_router.py" = ["F841"]
"gispulse/adapters/http/serve_app.py" = ["E402"]
"gispulse/adapters/http/app.py" = ["F841"]
"gispulse/cli.py" = ["F841"]
"orchestration/job_queue.py" = ["E402"]
"capabilities/density.py" = ["F841"]
"capabilities/network.py" = ["F841"]
"persistence/gpkg.py" = ["F841"]
"scripts/build_playground_data.py" = ["F841"]
"scripts/smoke_test_docs.py" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an async coroutine",
]
