[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-sdk"
version = "0.1.0"
description = "Python SDK for GISPulse — geospatial engine client library"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ws = ["websockets>=12.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gispulse_sdk*"]

[tool.ruff]
target-version = "py39"
line-length = 100
