[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-cap-example"
version = "0.1.0"
description = "Example GISPulse capability plugin"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14",
]

# This is the key: register the entry-point so GISPulse discovers the plugin
[project.entry-points."gispulse.capabilities"]
example = "gispulse_cap_example:register"
