[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-cap-filtermate"
version = "2.0.1"
description = "Advanced spatial filtering, attribute preparation and multi-format export"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "GISPulse", email = "dev@gispulse.io" }]
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
]

[project.entry-points."gispulse.capabilities"]
filtermate = "gispulse_cap_filtermate:register"
