[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-cap-report"
version = "1.1.0"
description = "Generate PDF and HTML reports from analysis results with customizable templates"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "GISPulse", email = "dev@gispulse.io" }]
dependencies = [
    "gispulse>=2.0.0,<3.0.0",
    "geopandas>=0.14",
    "jinja2>=3.1",
]

[project.entry-points."gispulse.capabilities"]
report_builder = "gispulse_cap_report:register"

[tool.gispulse.plugin]
kind = "capability"
protocol = ">=1.0,<2.0"
