[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-src-bodacc"
version = "0.1.0"
description = "French BODACC data source for GISPulse"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "GISPulse", email = "dev@gispulse.io" }]
dependencies = [
    "gispulse>=2.0.0,<3.0.0",
]

[project.entry-points."gispulse.data_sources"]
bodacc = "gispulse_src_bodacc:register"

[tool.gispulse.plugin]
kind = "source"
protocol = ">=1.0,<2.0"
domain = "statistique"
jurisdiction = "FR"
display_name = "BODACC - annonces commerciales (France)"
