[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gispulse-src-insee"
version = "0.1.0"
description = "French INSEE statistical units source for GISPulse (IRIS WFS)"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "GISPulse", email = "dev@gispulse.io" }]
dependencies = [
    "gispulse>=2.0.0,<3.0.0",
]

# Registered as a data source — discovered by core.plugin_hub.PluginHub.
[project.entry-points."gispulse.data_sources"]
insee = "gispulse_src_insee:register"

[tool.gispulse.plugin]
kind = "source"
protocol = ">=1.0,<2.0"
domain = "statistique"
jurisdiction = "FR"
display_name = "INSEE — unités statistiques (France)"
